// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StatusTrendCard Visual Regression matches error type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        aria-label="5.2% Artış gösteriyor"
        class="flex items-center text-xs font-medium text-green-600"
        role="text"
      >
        <svg
          aria-label="Artış gösteriyor"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 7 13.5 15.5 8.5 10.5 2 17"
          />
          <polyline
            points="16 7 22 7 22 13"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <span
          class="absolute text-sm font-medium text-red-500 dark:text-red-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard Visual Regression matches info type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        aria-label="5.2% Artış gösteriyor"
        class="flex items-center text-xs font-medium text-green-600"
        role="text"
      >
        <svg
          aria-label="Artış gösteriyor"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 7 13.5 15.5 8.5 10.5 2 17"
          />
          <polyline
            points="16 7 22 7 22 13"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <span
          class="absolute text-sm font-medium text-blue-500 dark:text-blue-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard Visual Regression matches snapshot with custom formatting 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5ms"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        aria-label="5.2% Artış gösteriyor"
        class="flex items-center text-xs font-medium text-green-600"
        role="text"
      >
        <svg
          aria-label="Artış gösteriyor"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 7 13.5 15.5 8.5 10.5 2 17"
          />
          <polyline
            points="16 7 22 7 22 13"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <span
          class="absolute text-sm font-medium text-blue-500 dark:text-blue-400"
        >
          85.5ms
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard Visual Regression matches success type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        aria-label="5.2% Artış gösteriyor"
        class="flex items-center text-xs font-medium text-green-600"
        role="text"
      >
        <svg
          aria-label="Artış gösteriyor"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 7 13.5 15.5 8.5 10.5 2 17"
          />
          <polyline
            points="16 7 22 7 22 13"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <span
          class="absolute text-sm font-medium text-green-500 dark:text-green-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`StatusTrendCard Visual Regression matches warning type snapshot 1`] = `
<div>
  <div
    aria-label="Test Metric: 85.5%"
    class="rounded-2xl bg-white shadow-sm ring-1 ring-gray-200 p-4 w-full max-w-sm dark:bg-gray-800 dark:ring-gray-700 dark:shadow-none"
    role="status"
  >
    <div
      class="flex items-start justify-between mb-2"
    >
      <h3
        class="text-sm font-medium text-gray-900 dark:text-gray-100"
      >
        Test Metric
      </h3>
      <div
        aria-label="5.2% Artış gösteriyor"
        class="flex items-center text-xs font-medium text-green-600"
        role="text"
      >
        <svg
          aria-label="Artış gösteriyor"
          class="lucide lucide-trending-up w-4 h-4 mr-1"
          fill="none"
          height="24"
          role="img"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="22 7 13.5 15.5 8.5 10.5 2 17"
          />
          <polyline
            points="16 7 22 7 22 13"
          />
        </svg>
        5.2
        %
      </div>
    </div>
    <div
      class="flex items-center space-x-4"
    >
      <div
        class="relative w-16 h-16 flex items-center justify-center"
      >
        <span
          class="absolute text-sm font-medium text-yellow-500 dark:text-yellow-400"
        >
          85.5%
        </span>
      </div>
      <div
        class="flex-1 min-w-0"
      >
        <p
          class="text-xs text-gray-500 dark:text-gray-400 mb-1"
        >
          son 24 saat
        </p>
      </div>
    </div>
  </div>
</div>
`;
